--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(MyCode)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(MT MT.cpp)
+add_executable(MT2 MT2.cpp)
 
 add_executable(DJI DJI.cpp)
 add_executable(DEWU DEWU.cpp)
