增加淘天和小米笔试内容

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(MT2 MT2.cpp)
 
 add_executable(DJI DJI.cpp)
 add_executable(DEWU DEWU.cpp)
+add_executable(TT2 TT2.cpp)
+add_executable(XM XM.cpp)
