--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(MT2 MT2.cpp)
 add_executable(DJI DJI.cpp)
 add_executable(DEWU DEWU.cpp)
 add_executable(TT TT.cpp)
+add_executable(YT YT.cpp)
