--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ add_executable(TT TT.cpp)
 
 add_executable(ZSBank ZSBank.cpp)
 add_executable(YT YT.cpp)
+add_executable(KS KS.cpp)
+add_executable(BD BD.cpp)
