深信服和迈瑞医疗

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,6 @@ add_executable(ZSBank ZSBank.cpp)
 add_executable(YT YT.cpp)
 add_executable(KS KS.cpp)
 add_executable(BD BD.cpp)
-add_executable(GLD GLD.cpp)
+#add_executable(GLD GLD.cpp)
+add_executable(SXF SXF.cpp)
+add_executable(MR MR.cpp)
