--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(BD BD.cpp)
 #add_executable(GLD GLD.cpp)
 add_executable(SXF SXF.cpp)
 add_executable(MR MR.cpp)
+add_executable(MHY MHY.cpp)
