--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_executable(BD BD.cpp)
 add_executable(SXF SXF.cpp)
 add_executable(MR MR.cpp)
 add_executable(MHY MHY.cpp)
+add_executable(ALIYUN ALIYUN.cpp)
