--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(SXF SXF.cpp)
 add_executable(MR MR.cpp)
 add_executable(MHY MHY.cpp)
 add_executable(ALIYUN ALIYUN.cpp)
+add_executable(HW HW.cpp)
